--- a/ecopot/style.css
+++ b/ecopot/style.css
@@ -3,7 +3,7 @@ body{
     padding: 0;
     font-family: Verdana, Arial, Tahoma, sans-serif;
     color: #8FA871;
-    background: #052501;
+    background: rgb(240, 230, 213);
     font-size: 1em;
     line-height: 1.5em;
     padding-top: 80px;
@@ -22,7 +22,7 @@ p{
 }
 
 #m-header{
-    background: rgb(32,61,37,24);
+    background: rgb(95, 105, 68);
     color: #white;
     height: 80px;
 }
@@ -32,7 +32,7 @@ p{
 }
 
 #m-header {
-    background: rgb(32,61,37,24);
+    background: rgb(95, 105, 68);
     color: white;
     height: 80px;
     width: 100%;
@@ -61,7 +61,7 @@ p{
     display: block;
     font-weight: 300;
     font-size: 0.8em;
-    color: #113B0C;
+    color: rgb(203, 189, 162);
 }
 
 nav {
@@ -94,8 +94,8 @@ nav ul li a:hover {
 #m-content {
     background: white;
     width: 90%;
-	max-width: 800px;
-	margin: 20px auto;
+	max-width: 1000px;
+    margin: 20px auto;
 	box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 
@@ -105,11 +105,12 @@ nav ul li a:hover {
 }
 
 #m-footer {
-    background: rgb(32,61,37,24);
+    background: rgb(95, 105, 68);
     color: white;
     text-align: center;
-    padding: 20px;
-    margin-top: 40px;
+    padding: 22px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
 }
 
