--- a/ecopot/style.css
+++ b/ecopot/style.css
@@ -15,10 +15,25 @@ h1{
     margin: 15px 0;
     text-align: center;
     font-weight: 300;
+    text-decoration: overline underline #8FA871;
+}
+
+h2{
+    font-size: 2.3em;
+    line-height: 1.3em;
+    margin: 15px 0;
+    text-align: center;
+    font-weight: 300;
 }
 
 p{
     margin: 0 0 1.5em 0;
+}
+
+img {
+
+    max-width: 100%;
+    height: auto;
 }
 
 #m-header{
@@ -96,7 +111,9 @@ nav ul li a:hover {
     width: 90%;
 	max-width: 1000px;
     margin: 20px auto;
-	box-shadow: 0 0 10px rgba(0,0,0,.1);
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    
+    
 }
 
 #m-content header,
